Fix people playing on mobile

--- a/css/game.css
+++ b/css/game.css
@@ -287,7 +287,6 @@ a:hover {
 	}
 
 	.people-playing {
-		margin: 6rem;
 		padding: 5px 10px;
 	}
 
